--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -108,6 +108,13 @@ input[type="text"]:focus {
     /* box-shadow: rgba(255, 255, 255, 0.677) 1.95px 1.95px 2.6px; */
 }
 
+.message {
+    margin: 0 auto;
+    padding: 10px;
+    border-radius: 10px;
+    width: 30%;
+}
+
 .btn:hover {
     background-color: #ffffff;
     color: #000;
@@ -156,7 +163,7 @@ input[type="text"]:focus {
         margin: auto;
         opacity: 0.75;
         animation: spin 10s infinite linear;
-        width: 80%;
+        width: 60%;
     }
 
     .title {
