The soft is working incredibly fine !

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="input">
             <input type="text" id="url" placeholder="Enter any Youtube Url...">
-            <a class="btn" id="launcher" onclick="processing_link()">Send to the DJ</a>
+            <a class="btn" id="launcher" onclick="processing_link()">Add your track</a>
         </div>
     </div>
 </body>
